--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <img src="Images/IMG_02.JPG" class="mx-auto d-block" alt="Chirag">
+                <img src="https://scontent.fccu2-2.fna.fbcdn.net/v/t1.6435-9/126533343_2781716012144239_6171788542577772776_n.jpg?_nc_cat=107&ccb=1-3&_nc_sid=730e14&_nc_ohc=wIYYvSSRAjkAX-d8gAn&_nc_ht=scontent.fccu2-2.fna&oh=cc1b029a88fab7b98c1e4503e11cc1f7&oe=60D4B38D" class="img-fluid" alt="Chirag">
             </div>
             <div class="col">
                 <h1 class="text-center my-2">Let's Keep In <span class="badge bg-dark">Touch!</span></h1>
